<resources>
    <string name="app_name">TelemedicineApp</string>

    <!--    Plain Text      -->
    <string name="loginText">LOGIN</string>
    <string name="unabeTOLogin">Unable to login? Register here</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="OnboardingForm">Onboarding Form</string>
    <string name="DashboardScreen">Dashboard Screen</string>

    <!--    Hints        -->
    <string name="hintEmail"> Email </string>
    <string name="hintPassword"> Password </string>
    <string name="hintFullName"> Full Name </string>
    <string name="hintMobileNumber"> Phone Number </string>
    <string name="hintSpecialization"> Spedialization </string>
    <string name="hintLicenseNumber"> License Number </string>
    <string name="hintClinicAddress"> Clinic Address </string>


    <!--    Buttons     -->
    <string name="loginButton"> LOGIN </string>
    <string name="registerButton"> REGISTER </string>
    <string name="submitButton">SUBMIT </string>
    <string name="updateButton">Update Profile </string>

</resources>