<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout_onboardingFormScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".OnboardingFormActivity">

    <androidx.cardview.widget.CardView

        android:id="@+id/cardlayout_OnboardingFormScreen"
        android:layout_width="400dp"
        android:layout_height="700dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     >
        <ScrollView

            android:id="@+id/scrollView_OnboardingFormScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

    <LinearLayout

        android:id="@+id/linearLayout_OnboardingFormScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp"
        >



            <TextView

                android:id="@+id/textView_textOnboardingForm_OnboardingFormScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"

                android:text="@string/OnboardingForm"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                />

            <EditText
                android:id="@+id/editText_PhoneNumber_OnboardingFormScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:textSize="20sp"
                android:hint="@string/hintMobileNumber"

                />



            <EditText
                android:id="@+id/editText_FULLNAME_OnboardingFormScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintFullName"
                android:textSize="20sp"

                />


        <EditText
            android:id="@+id/editText_Email_OnboardingFormScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hintEmail"
            android:textSize="20sp"
            />





            <EditText
                android:id="@+id/editText_Specialization_OnboardingFormScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintSpecialization"
                android:textSize="20sp"


                />

            <EditText
                android:id="@+id/editText_License_OnboardingFormScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintLicenseNumber"
                android:textSize="20sp"


                />

            <EditText
                android:id="@+id/editText_ClinicAddress_OnboardingFormScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hintClinicAddress"
                android:textSize="20sp"


                />


        <Button
            android:id="@+id/button_ONBOARD_OnboardingFormScreen"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/registerButton"
            android:textStyle="bold"
            android:layout_margin="35dp"
            android:backgroundTint="@color/teal_700"
            />




        </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>