<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout_RegisterScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView

        android:id="@+id/cardlayout_RegisterScreen"
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <LinearLayout

            android:id="@+id/linearLayout_RegisterScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10dp"
            >

            <TextView

                android:id="@+id/textView_textLOGIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/registerButton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                />

            <EditText

                android:id="@+id/editText_MobileNumber_RegisterScreen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hintMobileNumber"
                android:padding="10dp"
                android:layout_marginVertical="20dp"

                />

            <EditText

                android:id="@+id/editText_Email_RegisterScreen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hintEmail"
                android:padding="10dp"
                android:layout_marginVertical="15dp"

                />

            <EditText

                android:id="@+id/editText_Password_RegisterScreen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hintPassword"
                android:padding="10dp"
                android:layout_marginVertical="15dp"

                />

            <Button
                android:id="@+id/button_REGISTER_RegisterScreen"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/registerButton"
                android:textStyle="bold"
                android:backgroundTint="@color/teal_700"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>